syntax = "proto3";

package moneytransfer;

import "google/protobuf/timestamp.proto";  

option go_package = "github.com/tunvx/simplebank/grpc/pb/moneytransfer";

message MoneyTransferTx {
    int64  transaction_id = 1;
    int64  amount = 2;
    int64  new_balance = 3;
    int64  account_id = 4;
    google.protobuf.Timestamp transaction_time = 5; 
    string description = 6;
    string transaction_type = 7;
    string transaction_status = 8;
}
